this is ready for when each aim is final; each aim will likely have its own data and image dependecies. will need to combine all references.bib into single file too.

--- a/_extensions/monashthesis/_extension.yml
+++ b/_extensions/monashthesis/_extension.yml
@@ -27,7 +27,8 @@ contributes:
       - right=2.5cm
       block-headings: false
       colorlinks: true
-      linestretch: 1.5
+      linestretch: 2
+      output-file: "Olson-Williams_dissertation.pdf"
       template-partials:
         - "before-title.tex"
         - "title.tex"
