--- a/_extensions/monashthesis/_extension.yml
+++ b/_extensions/monashthesis/_extension.yml
@@ -32,6 +32,9 @@ contributes:
       template-partials:
         - "before-title.tex"
         - "title.tex"
+      header-includes:
+        - \usepackage{setspace}
+        - \doublespacing
     html:
       theme:
         - cosmo
