getting ready to branch to torch the monash template

--- a/_extensions/monashthesis/_extension.yml
+++ b/_extensions/monashthesis/_extension.yml
@@ -49,3 +49,5 @@ contributes:
         - fonts.html
       include-in-header:
         file: fonts.html
+    docx:
+      output-file: "Olson-Williams_dissertation.docx"
