going to bed this is due tomorrow. this version is fine but maybe will make some small changes tomorrow am

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,13 @@ affiliation: Department of Population Health
 #degrees: 'B.S. Mathematics, Case Western Reserve University'
 
 format:
-  monashthesis-html: default
-  monashthesis-pdf: default
-  monashthesis-docx: default
+  pdf:
+    documentclass: report
+    pdf-engine: xelatex
+    header-includes:
+      - \usepackage{setspace}
+      - \doublespacing
+  #monashthesis-html: default
+  #monashthesis-pdf: default
+  #monashthesis-docx: default
 prefer-html: true
