getting ready to edit some maps

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,7 +28,7 @@ affiliation: Department of Population Health
 
 format:
   pdf:
-    documentclass: report
+    #documentclass: report
     pdf-engine: xelatex
     header-includes:
       - \usepackage{setspace}
